--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -20,7 +20,7 @@ a {
 }
 
 header {
-    background-color: #D33C44;
+    background-color: #15848F;
     color: #ffffff;
     font-size: 30px;
     height: 84px;
@@ -50,6 +50,13 @@ legend {
 
 .actions.columns h3 {
     color:#15848F;
+}
+
+.index table {
+    margin-top: 2rem;
+    border: 0;
+    width: 100%;
+    table-layout: fixed;
 }
 
 .related table {
@@ -120,6 +127,21 @@ ul.pagination .disabled:hover a {
 }
 .desc:after {
     content: " \2191";
+}
+
+button {
+    background: #8D6E65;
+}
+
+.form button:hover, .form button:focus {
+    background: #7A6058;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.26) !important;
+}
+
+.form button[type="submit"] {
+    float: right;
+    text-transform: uppercase;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.26);
 }
 
 .form .error-message {
@@ -268,6 +290,33 @@ pre {
     text-decoration: underline;
 }
 
+.home header {
+    width: 100%;
+    height: 85%;
+    position: relative;
+    display: table;
+}
+
+.home h1 {
+    font-family: "Gill Sans MT", Calibri, sans-serif;
+}
+
+.home header .header-image {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.home header h1 {
+    color: #fff;
+}
+
+#content {
+    padding-top: 2em;
+    margin: 0 auto;
+    width: 95%;
+}
+
 .checks {
     padding:30px;
     color: #626262;
@@ -286,6 +335,16 @@ pre {
     height: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.home .checks.ctp-warning {
+    color: black;
+    background-color: #ffc600;
+}
+
+.home .checks.url-rewriting {
+    background-color: #F0F0F0;
+    display: none;
 }
 
 .checks .success,
@@ -346,8 +405,6 @@ pre {
 .index table {
     margin-top: 0rem;
     border: 0;
-    width: 100%;
-    table-layout: fixed;
 }
 
 table {
@@ -410,7 +467,7 @@ button {
 }
 
 div.message {
-    text-align: center;
+	text-align: center;
     cursor: pointer;
     display: block;
     font-weight: normal;
@@ -425,6 +482,7 @@ div.message {
     height: 50px;
     line-height: 2.5em;
     box-radius: 5px;
+    
 }
 
 div.message:before {
@@ -517,9 +575,4 @@ div.message.hidden {
     margin-top: 20px;
     margin-bottom: 10px;
     border-bottom: 0px;
-}
-
-table td {
-    vertical-align: top;
-    word-break: break-all;
 }
