--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -24,7 +24,7 @@ body {
 	font-weight:300;
 	font-size: 13px;
 	line-height: 20px;
-	color: #4c8b4b;
+	color: #666;
 	background-color:#fff;
 }
 #page {overflow-x:hidden; position:relative; z-index:5;}
@@ -244,7 +244,7 @@ header {
 }
 
 
-/* __________ Logo __________ 
+/* __________ Logo __________ */
 .logo {float:left;}
 .logo a {
 	text-transform:uppercase;
@@ -261,7 +261,9 @@ header {
 .logo a span.b3 {font-weight:400;}
 .logo a span.b4 {font-weight:300;}
 .logo a span.b5 {font-weight:100;}
-*/
+
+
+
 
 /* __________ Menu __________ */
 .menu_block {
@@ -288,7 +290,7 @@ header {
 	font-weight:900;
 	line-height:20px;
 	font-size:13px;
-	color:#4c8b4b;
+	color:#666;
 	transition: all 0.3s ease-in-out; 
 	-webkit-transition: all 0.3s ease-in-out;
 }
@@ -448,7 +450,7 @@ header {
 	padding-bottom:9px;
 	font-weight:300;
 	font-size:14px;
-	color:#4c8b4b;
+	color:#666;
 }
 
 
@@ -600,7 +602,7 @@ header {
 	font-weight:300;
 	line-height:26px;
 	font-size:17px;
-	color:#4c8b4b;
+	color:#666;
 }
 .purpose_block .btn {margin-top:30px; margin-right:16px;}
 .purpose_block .btn-active {overflow:hidden;}
@@ -701,7 +703,7 @@ header {
 	color:#fff;
 }
 .work_item .work_description span {
-	color:#4c8b4b;
+	color:#666;
 }
 
 .work_item a.zoom {
@@ -860,7 +862,7 @@ ul.project_info li span {color:#979797;}
 	color:#fff;
 }
 .crewman_item .crewman_descr span {
-	color:#4c8b4b;
+	color:#666;
 }
 
 .crewman_item .crewman_social {
@@ -916,7 +918,7 @@ ul.project_info li span {color:#979797;}
 	padding-top:46px;
 	font-weight:300;
 	font-size:16px;
-	color:#4c8b4b;
+	color:#666;
 }
 .testim_author b {
 	font-weight:500;
@@ -1009,14 +1011,14 @@ ul.project_info li span {color:#979797;}
 	font-size:14px;
 	color:#ccc;
 }
-.post_item_content_small a.title:hover {color:#4c8b4b;}
+.post_item_content_small a.title:hover {color:#666;}
 .post_item_inf_small li {
 	display:inline-block;
 	padding-top:4px;
 	padding-right:10px;
 	line-height:17px;
 	font-size:11px;
-	color:#4c8b4b;
+	color:#666;
 }
 
 
@@ -1045,7 +1047,7 @@ ul.project_info li span {color:#979797;}
 	font-size:18px;
 	color:#333;
 }
-.post_item_content_widgeta.title:hover {color:#4c8b4b;}
+.post_item_content_widgeta.title:hover {color:#666;}
 .post_item_inf_widget li {
 	display:inline-block;
 	padding-top:12px;
@@ -1230,7 +1232,7 @@ input[type="tel"]:focus,
 input[type="color"]:focus {
 	outline: 0;
 	box-shadow: none;
-	color:#4c8b4b;
+	color:#666;
 	border-color:#ccc;
 }
 
@@ -1336,7 +1338,7 @@ input[type="color"]:focus {
 	font-size:30px;
 	color:#333;
 }
-.blog_post_title:hover {color:#4c8b4b;}
+.blog_post_title:hover {color:#666;}
 
 .blog_post_info li {position:relative; display:inline-block; padding-right:22px;}
 .blog_post_info li:before {content:''; position:absolute; right:9px; top:4px; height:12px; width:1px; background-color:#d3d3d3;}
@@ -1352,7 +1354,7 @@ input[type="color"]:focus {
 	font-size:16px;
 	color:#333;
 }
-.blog_post .read_more_btn:hover {color:#4c8b4b;}
+.blog_post .read_more_btn:hover {color:#666;}
 
 
 
@@ -1497,7 +1499,7 @@ input[type="color"]:focus {
 	border-color:#e9e9e9;
 	text-transform:uppercase;
 	font-size:11px;
-	color:#4c8b4b;
+	color:#666;
 }
 #comment_form textarea {min-height:140px;}
 #comment_form .contact_btn {
@@ -1574,7 +1576,7 @@ input[type="color"]:focus {
 	display:inline-block;
 	line-height:24px;
 	font-size:20px;
-	color:#4c8b4b;
+	color:#666;
 }
 .widget_meta li a:hover {color:#333;}
 
@@ -1858,7 +1860,7 @@ input[type="color"]:focus {
 	.navmenu li.sub-menu:hover, .navmenu li.sub-menu.active_page {background:none;}
 	.sub-menu ul li a {background:none; border:0; padding-left:30px;}
 	.sub-menu ul li a:hover, .sub-menu ul li.active a {background:none !important; color:#333 !Important;}
-	.sub-menu ul li a:before {content:'-'; position:absolute; z-index:10; left:17px; top:4px; color:#4c8b4b;}
+	.sub-menu ul li a:before {content:'-'; position:absolute; z-index:10; left:17px; top:4px; color:#666;}
 
 
 /* __________ Index __________ */
