Criação do menu.
Ajustes de navegação.

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -131,6 +131,7 @@ p{
 .wp-pic{
 	margin-bottom:20px;
 }
+.linkAbout
 .we-create li{
 	display:inline-block;
 	font-family: 'Montserrat',sans-serif;
