Página home finalizada
Página home finalizada

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -882,3 +882,8 @@ border: 2px solid #fff;
 	animation-delay: 1.2s;
 	-webkit-animation-delay: 1.2s;
 }
+.partner {
+    padding-bottom: 60px;
+}
+
+
