Alteração cor dos links; Quantidade de clientes exibidos; alteração da cor botão de serviços.
Alteração cor dos links;
Quantidade de clientes exibidos;
Alteração da cor botão de serviços.

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -385,7 +385,7 @@ color: #fff;
 }
 
 .Portfolio-nav li a.current{
-	background:#7cc576;
+	background: #4c8b4b;
 	color:#fff;
 	text-decoration:none;
 }
