--- a/webroot/css/bootstrap.css
+++ b/webroot/css/bootstrap.css
@@ -280,7 +280,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #428bca;
+  color: #4c8b4b;
   text-decoration: none;
 }
 a:hover,
@@ -457,7 +457,7 @@ cite {
   color: #999999;
 }
 .text-primary {
-  color: #428bca;
+  color: #4c8b4b;
 }
 .text-primary:hover {
   color: #3071a9;
@@ -1986,7 +1986,7 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #428bca;
+  background-color: #4c8b4b;
   border-color: #357ebd;
 }
 .btn-primary:hover,
@@ -2018,11 +2018,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #428bca;
+  background-color: #4c8b4b;
   border-color: #357ebd;
 }
 .btn-primary .badge {
-  color: #428bca;
+  color: #4c8b4b;
   background-color: #fff;
 }
 .btn-warning {
@@ -2190,7 +2190,7 @@ fieldset[disabled] .btn-info.active {
   background-color: #fff;
 }
 .btn-link {
-  color: #428bca;
+  color: #4c8b4b;
   font-weight: normal;
   cursor: pointer;
   border-radius: 0;
@@ -2985,7 +2985,7 @@ input[type="button"].btn-block {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #428bca;
+  background-color: #4c8b4b;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -3441,7 +3441,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #428bca;
+  border-color: #4c8b4b;
 }
 .nav .nav-divider {
   height: 1px;
@@ -3534,7 +3534,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #428bca;
+  background-color: #4c8b4b;
 }
 .nav-stacked > li {
   float: none;
@@ -4167,8 +4167,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #4c8b4b;
+  border-color: #4c8b4b;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -4299,7 +4299,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   background-color: #808080;
 }
 .label-primary {
-  background-color: #428bca;
+  background-color: #4c8b4b;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
@@ -4362,7 +4362,7 @@ a.badge:focus {
 }
 a.list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #428bca;
+  color: #4c8b4b;
   background-color: #ffffff;
 }
 .nav-pills > li > a > .badge {
@@ -4427,7 +4427,7 @@ a.list-group-item.active > .badge,
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #428bca;
+  border-color: #4c8b4b;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -4539,7 +4539,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #ffffff;
   text-align: center;
-  background-color: #428bca;
+  background-color: #4c8b4b;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -4653,8 +4653,8 @@ a.list-group-item.active:hover,
 a.list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #4c8b4b;
+  border-color: #4c8b4b;
 }
 a.list-group-item.active .list-group-item-heading,
 a.list-group-item.active:hover .list-group-item-heading,
@@ -4839,18 +4839,18 @@ a.list-group-item.active:focus .list-group-item-text {
   border-bottom-color: #dddddd;
 }
 .panel-primary {
-  border-color: #428bca;
+  border-color: #4c8b4b;
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #4c8b4b;
+  border-color: #4c8b4b;
 }
 .panel-primary > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #428bca;
+  border-top-color: #4c8b4b;
 }
 .panel-primary > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #428bca;
+  border-bottom-color: #4c8b4b;
 }
 .panel-success {
   border-color: #d6e9c6;
