Inicio da pagina qualidade do ar e emissões.

--- a/webroot/css/bootstrap.css
+++ b/webroot/css/bootstrap.css
@@ -3466,13 +3466,13 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-radius: 4px 4px 0 0;
 }
 .nav-tabs > li > a:hover {
-  border-color: #eeeeee #eeeeee #dddddd;
+  border-color: #eeeeee #eeeeee #599458;
 }
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
   color: #555555;
-  background-color: #ffffff;
+  background-color: #599458;
   border: 1px solid #dddddd;
   border-bottom-color: transparent;
   cursor: default;
