Finalização da pagina de transportes.

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -373,6 +373,17 @@ color: #fff;
 	float:left;
 	padding:0;
 }
+
+.Portfolio-box-caminhao{
+	text-align:center;
+	margin-bottom:30px;
+	height:430px;
+	width:350px;
+	overflow:hidden;
+	float:left;
+	padding:0;
+}
+
 .Portfolio-box img{
 	margin-bottom:25px;
 	transition:all 0.3s ease-in-out;
