--- a/webroot/css/bootstrap.css
+++ b/webroot/css/bootstrap.css
@@ -3472,7 +3472,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
   color: #555555;
-  background-color: #599458;
+  background-color: #4c8b4b;
   border: 1px solid #dddddd;
   border-bottom-color: transparent;
   cursor: default;
